--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
             </div>
         </div>
         <div id="bomb"><img src="bomb.png" width="30px" height="30px"><p id="name"></p>Ռումբ</p></div>
+        <p>Programming 3</p>
    </body>
 </html>
