optimization of files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
        <script src="class.js"></script>
        <script src="script.js"></script>
+       <script src="grass.js"></script>
+       <script src="grasseater.js"></script>
+       <script src="predator.js"></script>
+       <script src="toxicgrass.js"></script>
+       <script src="bonus.js"></script>
        <link rel="stylesheet" href="style.css" type="text/css"/>
    </head>
    <body>
@@ -24,6 +29,5 @@
             </div>
         </div>
         <div id="bomb"><img src="bomb.png" width="30px" height="30px"><p id="name"></p>Ռումբ</p></div>
-        <p>Programming 3</p>
    </body>
 </html>
