--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
    <head>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.js"></script>
-       <script src="script.js"></script>
-       <script src="grass.js"></script>
-       <script src="grasseater.js"></script>
-       <script src="predator.js"></script>
-       <script src="toxicgrass.js"></script>
-       <script src="bonus.js"></script>
+       <script src="scripts/class.js"></script>
+       <script src="scripts/script.js"></script>
+       <script src="scripts/grass.js"></script>
+       <script src="scripts/grasseater.js"></script>
+       <script src="scripts/predator.js"></script>
+       <script src="scripts/toxicgrass.js"></script>
+       <script src="scripts/bonus.js"></script>
        <link rel="stylesheet" href="style.css" type="text/css"/>
    </head>
    <body>
@@ -18,9 +18,9 @@
        <div id="tunxot" class="guyn3"><p id="name">Թունավոր Խոտ</p></div>
        <div id="bonus" class="guyn4">
             <p id="name">Բոնուս</p>
-            <img src="info.png" width="20px" height="20px" id="info" onclick="infoblock()">
+            <img src="images/info.png" width="20px" height="20px" id="info" onclick="infoblock()">
             <div id="infoblock">
-                <img src="cancel.png" width="15px" height="15px" id="close" onclick="infoblockclose()">
+                <img src="images/cancel.png" width="15px" height="15px" id="close" onclick="infoblockclose()">
                 <ul>
                     <li>Խոտի ուտելու դեպքում վերջինս բազմանում է պատահական 5 տեղում</li>
                     <li>Խատկերի ուտելու դեպքում վերջինս բազմանում է իր հարակից 8 վանդակներում և թունավոր խոտ ուտելիս չի մահանում</li>
@@ -28,6 +28,6 @@
                 </ul>
             </div>
         </div>
-        <div id="bomb"><img src="bomb.png" width="30px" height="30px"><p id="name"></p>Ռումբ</p></div>
+        <div id="bomb"><img src="images/bomb.png" width="30px" height="30px"><p id="name"></p>Ռումբ</p></div>
    </body>
 </html>
