--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
    <head>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="server.js"></script>
        <script src="/socket.io/socket.io.js"></script>
-       <script src="scripts/LivingCreauture.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+       <script src="scripts/LivingCreature.js"></script>
        <script src="scripts/script.js"></script>
-       <script src="scripts/grass.js"></script>
+       <!-- <script src="scripts/grass.js"></script>
        <script src="scripts/grasseater.js"></script>
        <script src="scripts/predator.js"></script>
        <script src="scripts/toxicgrass.js"></script>
-       <script src="scripts/bonus.js"></script>
+       <script src="scripts/bonus.js"></script> -->
        <link rel="stylesheet" href="style.css" type="text/css"/>
    </head>
    <body>
