--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
        <link rel="stylesheet" href="style.css" type="text/css"/>
    </head>
    <body>
+    <ul>
+        <li>
+            <button onclick="kill()">Kill them all</button>
+        </li>
+        <li>
+            <button onclick="addGrass()">Add grass</button>
+        </li>
+        <li>
+            <button onclick="addGrassEater()">Add grass eater</button>
+        </li>
+    </ul>
        <p id="bombtime"></p>
        <div id="xot" class="guyn"><p id="name">Խոտ</p></div>
        <div id="xotaker" class="guyn1"><p id="name">Խոտակեր</p></div>
