--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <li>
             <button onclick="addGrassEater()">Add grass eater</button>
         </li>
+        <li>
+            <button onclick="addPredator()">Add predator</button>
+        </li>
+        <li>
+            <button onclick="addToxicGrass()">Add toxic grass</button>
+        </li>
+        <li>
+            <button onclick="addBonus()">Add bonus</button>
+        </li>
     </ul>
        <p id="bombtime"></p>
        <div id="xot" class="guyn"><p id="name">Խոտ</p></div>
