--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
     <ul>
         <li>
-            <button onclick="kill()">Kill them all</button>
+            <button onclick="kill()" id="kill">Kill them all</button>
         </li>
         <li>
             <button onclick="addGrass()">Add grass</button>
