--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
    <head>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="p5.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script> -->
-        <!-- <script src="scripts/LivingCreature.js"></script> -->
-        <script src="scripts/script.js"></script>
+       <script src="/socket.io/socket.io.js"></script>
+       <script src="p5.js"></script>
+       <script src="scripts/script.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" type="text/css"/>
@@ -22,7 +20,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Գույն</th>
                 <th scope="col">Նկարագրություն</th>
-                <th scope="col">Ծնվել է</th>
+                <th scope="col">Առկա է</th>
             </tr>
         </thead>
         <tbody>
@@ -44,19 +42,19 @@
                 <th scope="row">3</th>
                 <td scope="row" style="background-color: red;"></td>
                 <td>Կարմիրը գիշատիչն է, որը բազմանում է N հատ խոտակեր ուտելուց և մահանում է N հատ չուտելուց հետո, կամ ռումբի պայթելուց։</td>
-                <td id="grassEaterCount"></td>
+                <td id="predatorCount"></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
                 <td scope="row" style="background-color: #F62196;"></td>
                 <td>Վարդագույնը թունավոր խոտն է, որի ուտելուց դեպքում խոտակերը մահանում է։</td>
-                <td id="grassEaterCount"></td>
+                <td id="toxicGrassCount"></td>
             </tr>
             <tr>
                 <th scope="row">5</th>
                 <td scope="row" style="background-color: #3171E7;"></td>
                 <td>Կապույտը բոնուսն է, որի խոտի ուտելու դեպքում վերջինս բազմանում է պատահական 5 տեղում, խոտակերի ուտելու դեպքում վերջինս բազմանում է իր հարակից 8 վանդակներում և թունավոր խոտ ուտելիս չի մահանում, գիշատիչի ուտելու դեպքում վերջինս կարողանում է ուտել նաև սովորական և թունավոր խոտ</td>
-                <td id="grassEaterCount"></td>
+                <td id="bonusCount"></td>
             </tr>
         </tbody>
     </table>
